--- a/views/about.html
+++ b/views/about.html
@@ -11,6 +11,6 @@
     </h1>
     <h2> Nodejs program</h2>
     <a href="/">HomePage</a> <br>
-    <a href="/about.html">About Page</a>
+    <a href="/about">About Page</a>
 </body>
 </html>
